add style to form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="max-w-md mx-auto px-4"
+      <%= yield %>
+    </div>
   </body>
 </html>
