--- a/app/views/loaded_questions/games/new.html.erb
+++ b/app/views/loaded_questions/games/new.html.erb
@@ -4,19 +4,19 @@
 
 <%= form_with(model: @new_game, scope: :game, url: loaded_questions_games_path) do |form| %>
   <div>
-    <%= form.label :player_name, class: "mb-0.5 block" %>
-    <%= form.text_field :player_name, class: "mb-3 block w-full" %>
+    <%= form.label :player_name, class: "mt-3 block" %>
+    <%= form.text_field :player_name, class: "mt-0.5 block w-full" %>
   </div>
 
   <div>
-    <%= form.label :question, class: "mb-0.5 block" %>
-    <%= form.text_field :question, class: "mb-3 block w-full" %>
+    <%= form.label :question, class: "mt-3 block" %>
+    <%= form.text_field :question, class: "mt-0.5 block w-full" %>
   </div>
 
-  <div class="flex items-center mb-3">
+  <div class="flex items-center mt-3">
     <%= form.check_box :hide_answers %>
     <%= form.label :hide_answers, class: "ms-2" %>
   </div>
 
-  <%= form.submit "Create New Game", class: "w-full" %>
+  <%= form.submit "Create New Game", class: "mt-3 w-full" %>
 <% end %>
