--- a/app/views/loaded_questions/games/new.html.erb
+++ b/app/views/loaded_questions/games/new.html.erb
@@ -1,6 +1,4 @@
-<h1 class="text-2xl font-bold my-2">
-  Loaded Questions
-</h1>
+<h1 class="text-2xl font-bold my-2">Loaded Questions</h1>
 
 <%= form_with(model: @new_game, scope: :game, url: loaded_questions_games_path) do |form| %>
   <div>
