--- a/app/views/loaded_questions/games/show.html.erb
+++ b/app/views/loaded_questions/games/show.html.erb
@@ -1,4 +1,6 @@
-<h1>Loaded Questions</h1>
+<%= turbo_refreshes_with method: :morph, scroll: :preserve %>
+
+<h1 class="text-2xl font-bold my-2">Loaded Questions</h1>
 
 <div>
   <strong>Question:</strong>
