--- a/app/views/loaded_questions/games/_game.html.erb
+++ b/app/views/loaded_questions/games/_game.html.erb
@@ -3,11 +3,15 @@
 <%= turbo_stream_from @game %>
 
 <div class="flex flex-wrap items-start gap-2 mt-2">
-  <div class="w-75 p-3 border border-gray-800 rounded-lg">
-    <p class="font-normal text-gray-700">
-      <strong>Question:</strong>
-      <%= @game.question %>
-    </p>
+  <div class="w-75">
+    <div class="p-3 border border-gray-800 rounded-lg">
+      <p class="font-normal text-gray-700">
+        <strong>Question:</strong>
+        <%= @game.question %>
+      </p>
+    </div>
+
+    <%= yield %>
   </div>
 
   <div>
