--- a/app/views/loaded_questions/games/polling.html.erb
+++ b/app/views/loaded_questions/games/polling.html.erb
@@ -1,7 +1,12 @@
 <%= render layout: "game" do %>
   <% if @current_player.guesser? %>
-    Yes
+    <%= form_with(model: answer_form, scope: :player, url: answer_loaded_questions_game_player_path(@game.slug), method: :patch) do |form| %>
+      <div>
+        <%= form.text_field :answer, class: "mt-3 block w-full", aria: { label: 'Answer' } %>
+      </div>
+
+      <%= form.submit "Submit Answer", class: "mt-3 w-full" %>
+    <% end %>
   <% else %>
-    No
   <% end %>
 <% end %>
