--- a/app/views/loaded_questions/games/polling.html.erb
+++ b/app/views/loaded_questions/games/polling.html.erb
@@ -1,12 +1,18 @@
 <%= render layout: "game" do %>
   <% if @current_player.guesser? %>
-    <%= form_with(model: answer_form, scope: :player, url: answer_loaded_questions_game_player_path(@game.slug), method: :patch) do |form| %>
-      <div>
-        <%= form.text_field :answer, class: "mt-3 block w-full", aria: { label: 'Answer' } %>
-      </div>
+    <div data-controller="reveal" data-reveal-hidden-class="hidden">
+      <button data-action="reveal#toggle" type="button" class="mt-3 w-full text-white bg-gray-500 hover:bg-gray-800 font-medium rounded-lg text-sm p-2">
+        Show / Hide Answer
+      </button>
 
-      <%= form.submit "Submit Answer", class: "mt-3 w-full" %>
-    <% end %>
+      <div data-reveal-target="item" class="<%= "hidden" if answer_form.answer.present? %>">
+        <%= form_with(model: answer_form, scope: :player, url: answer_loaded_questions_game_player_path(@game.slug), method: :patch) do |form| %>
+          <%= form.text_field :answer, class: "mt-3 block w-full", aria: { label: 'Answer' } %>
+
+          <%= form.submit "Submit Answer", class: "mt-3 w-full" %>
+        <% end %>
+      </div>
+    </div>
   <% else %>
   <% end %>
 <% end %>
