--- a/app/views/loaded_questions/games/new.html.erb
+++ b/app/views/loaded_questions/games/new.html.erb
@@ -3,12 +3,12 @@
 <%= form_with(model: @new_game, scope: :game, url: loaded_questions_games_path) do |form| %>
   <div>
     <%= form.label :player_name, class: "mt-3 block" %>
-    <%= form.text_field :player_name, class: "mt-0.5 block w-full" %>
+    <%= form.text_field :player_name, class: "mt-0.5 block w-full", maxlength: ::Player::MAX_NAME_LENGTH %>
   </div>
 
   <div>
     <%= form.label :question, class: "mt-3 block" %>
-    <%= form.text_field :question, class: "mt-0.5 block w-full" %>
+    <%= form.text_area :question, class: "mt-0.5 block w-full", maxlength: ::Game::MAX_QUESTION_LENGTH %>
   </div>
 
   <div class="flex items-center mt-3">
