--- a/app/views/loaded_questions/games/polling.html.erb
+++ b/app/views/loaded_questions/games/polling.html.erb
@@ -7,7 +7,7 @@
 
       <div data-reveal-target="item" class="<%= "hidden" if answer_form.answer.present? %>">
         <%= form_with(model: answer_form, scope: :player, url: answer_loaded_questions_game_player_path(@game.slug), method: :patch) do |form| %>
-          <%= form.text_field :answer, class: "mt-3 block w-full", aria: { label: 'Answer' } %>
+          <%= form.text_area :answer, class: "mt-3 block w-full", aria: { label: 'Answer' }, maxlength: LoadedQuestions::AnswerForm::MAX_LENGTH %>
 
           <%= form.submit "Submit Answer", class: "mt-3 w-full" %>
         <% end %>
