--- a/app/views/loaded_questions/players/new.html.erb
+++ b/app/views/loaded_questions/players/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_with(model: @new_player, scope: :player, url: loaded_questions_game_player_path(@new_player.game_slug)) do |form| %>
   <div>
     <%= form.label :name, class: "mt-3 block" %>
-    <%= form.text_field :name, class: "mt-0.5 block w-full" %>
+    <%= form.text_field :name, class: "mt-0.5 block w-full", maxlength: ::Player::MAX_NAME_LENGTH %>
   </div>
 
   <%= form.submit "Create New Player", class: "mt-3 w-full" %>
