--- a/app/views/loaded_questions/games/_game.html.erb
+++ b/app/views/loaded_questions/games/_game.html.erb
@@ -18,24 +18,8 @@
 
   <div>
     <div class="font-bold">Players:</div>
-    <%= turbo_frame_tag "players" do %>
-      <ul>
-        <% @game.players.each do |player| %>
-          <li class="flex gap-1">
-            <% if player == @current_player || player.online? %>
-              <%= render "icons/solid_circle", classes: "w-5 h-5 text-green-500" %>
-            <% else %>
-              <%= render "icons/solid_circle", classes: "w-5 h-5 text-red-500" %>
-            <% end %>
-            <% if player.guesser? %>
-              <%= render "icons/solid_star", classes: "w-5 h-5" %>
-            <% else %>
-              <%= render "icons/square", classes: "w-5 h-5" %>
-            <% end %>
-            <span class="block"><%= player.name %></span>
-          </li>
-        <% end %>
-      </ul>
+    <%= turbo_frame_tag "players", refresh: "morph", src: players_loaded_questions_game_path(@game.slug) do %>
+      <%= render partial: "loaded_questions/players/player", collection: @game.players, as: :player, locals: { current_player: @current_player } %>
     <% end %>
   </div>
 </div>
