--- a/app/views/loaded_questions/games/polling.html.erb
+++ b/app/views/loaded_questions/games/polling.html.erb
@@ -14,5 +14,18 @@
       </div>
     </div>
   <% else %>
+    <div data-controller="reveal" data-reveal-hidden-class="hidden">
+      <button data-action="reveal#toggle" type="button" class="mt-3 w-full text-white bg-gray-500 hover:bg-gray-800 font-medium rounded-lg text-sm p-2">
+        Show / Hide Answer
+      </button>
+
+      <div data-reveal-target="item" class="<%= "hidden" unless answer_form.show? %>">
+        <%= form_with(model: answer_form, scope: :player, url: answer_loaded_questions_game_player_path(@game.slug), method: :patch) do |form| %>
+          <%= form.text_area :answer, class: "mt-3 block w-full", aria: { label: 'Answer' }, maxlength: LoadedQuestions::AnswerForm::MAX_LENGTH %>
+
+          <%= form.submit "Submit Answer", class: "mt-3 w-full" %>
+        <% end %>
+      </div>
+    </div>
   <% end %>
 <% end %>
