--- a/app/views/loaded_questions/games/polling.html.erb
+++ b/app/views/loaded_questions/games/polling.html.erb
@@ -1,21 +1,39 @@
 <%= render layout: "loaded_questions/games/game" do %>
   <% if @current_player.guesser? %>
-    <div data-controller="reveal" data-reveal-hidden-class="hidden">
-      <button data-action="reveal#toggle" type="button" class="mt-3 w-full text-white bg-gray-500 hover:bg-gray-800 font-medium rounded-lg text-sm p-2">
-        Show / Hide Answer
-      </button>
+    <div data-controller="dialog" data-action="click->dialog#backdropClose">
+      <dialog data-dialog-target="dialog" class="fixed z-50 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-100 bg-white rounded-md px-8 py-6 space-y-5 drop-shadow-lg">
+        <%= turbo_frame_tag "match" do %>
+          <% unless match_form.errors.empty? %>
+            <div class="p-2 bg-red-100 border border-red-400 rounded-lg">
+              <% match_form.errors.each do |error| %>
+                <div class="text-sm text-red-500">
+                  &bull; <%= error %>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+          <div class="py-4">
+            Are you sure you would like to begin matching answers?
+          </div>
 
-      <div data-reveal-target="item" class="<%= "hidden" unless answer_form.show? %>">
-        <%= form_with(model: answer_form, scope: :player, url: answer_loaded_questions_game_player_path(@game.slug), method: :patch) do |form| %>
-          <%= form.text_area :answer, class: "mt-3 block w-full", aria: { label: 'Answer' }, maxlength: LoadedQuestions::AnswerForm::MAX_LENGTH %>
-
-          <%= form.submit "Submit Answer", class: "mt-3 w-full" %>
+          <div class="flex justify-between">
+            <button type="button" data-action="dialog#close" class="mt-3 w-24 text-white bg-gray-500 hover:bg-gray-800 active:bg-gray-800 outline-none font-medium rounded-lg text-sm p-2">
+              No
+            </button>
+            <%= form_with(scope: :game, url: match_loaded_questions_game_path(@game.slug), method: :patch) do |form| %>
+              <%= form.submit "Yes", class: "mt-3 w-24" %>
+            <% end %>
+          </div>
         <% end %>
-      </div>
+      </dialog>
+
+      <button type="button" data-action="dialog#open" class="mt-3 w-full text-white bg-gray-500 hover:bg-gray-800 active:bg-gray-800 outline-none font-medium rounded-lg text-sm p-2">
+        Match Answers
+      </button>
     </div>
   <% else %>
     <div data-controller="reveal" data-reveal-hidden-class="hidden">
-      <button data-action="reveal#toggle" type="button" class="mt-3 w-full text-white bg-gray-500 hover:bg-gray-800 font-medium rounded-lg text-sm p-2">
+      <button type="button" data-action="reveal#toggle" class="mt-3 w-full text-white bg-gray-500 hover:bg-gray-800 active:bg-gray-800 font-medium rounded-lg text-sm p-2">
         Show / Hide Answer
       </button>
 
