--- a/app/views/loaded_questions/games/_guessed_answer.html.erb
+++ b/app/views/loaded_questions/games/_guessed_answer.html.erb
@@ -1,6 +1,15 @@
-<div>
-  <%= guessed_answer.player.name %>
-</div>
-<div>
-  <%= guessed_answer.answer %>
+<div class="pt-2" data-swap-target="group">
+  <div class="font-bold">
+    <%= guessed_answer.player.name %>
+  </div>
+  <div class="swap-item flex items-center gap-2 p-2 border border-gray-300 bg-gray-100 rounded-lg">
+    <% if gripper %>
+      <div>
+        <%= render "icons/dots_2x3", classes: "w-5 h-5" %>
+      </div>
+    <% end %>
+    <span class="block text-sm">
+      <%= guessed_answer.answer %>
+    </span>
+  </div>
 </div>
