--- a/app/views/loaded_questions/games/guessing_guesser.html.erb
+++ b/app/views/loaded_questions/games/guessing_guesser.html.erb
@@ -1,5 +1,13 @@
 <%= render layout: "loaded_questions/games/game" do %>
-  <div id="answers" class="border rounded-lg">
-    <%= render partial: "loaded_questions/games/guessed_answer", collection: @game.guesses, as: :guessed_answer %>
+  <div id="answers" class="mt-2 px-2 pb-2 border rounded-lg"
+    data-controller="swap">
+    <%=
+      render(
+        partial: "loaded_questions/games/guessed_answer",
+        collection: @game.guesses,
+        as: :guessed_answer,
+        locals: { gripper: true }
+      )
+    %>
   </div>
 <% end %>
