fix system test

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <div class="max-w-md mx-auto px-4"
+    <div class="max-w-md mx-auto px-4">
       <%= yield %>
     </div>
   </body>
