--- a/app/views/loaded_questions/games/guessing_guesser.html.erb
+++ b/app/views/loaded_questions/games/guessing_guesser.html.erb
@@ -1,5 +1,5 @@
 <%= render layout: "loaded_questions/games/game" do %>
-  <div id="answers" class="mt-2 px-2 pb-2 border rounded-lg"
+  <div id="answers" class="mt-2 px-2 pb-2 border rounded"
     data-controller="swap"
     data-swap-name-value="guess"
     data-swap-url-value="<%= swap_guesses_loaded_questions_game_path(@game.slug) %>">
