--- a/app/views/loaded_questions/games/guessing_player.html.erb
+++ b/app/views/loaded_questions/games/guessing_player.html.erb
@@ -1,5 +1,5 @@
 <%= render layout: "loaded_questions/games/game" do %>
-  <div id="answers" class="mt-2 px-2 pb-2 border rounded-lg">
+  <div id="answers" class="mt-2 px-2 pb-2 border rounded">
     <%=
       render(
         partial: "loaded_questions/games/guessed_answer",
