--- a/app/views/loaded_questions/games/new.html.erb
+++ b/app/views/loaded_questions/games/new.html.erb
@@ -1,15 +1,15 @@
-<h1 class="text-2xl font-bold my-2">Loaded Questions</h1>
+<h1 class="mb-3">Loaded Questions</h1>
 
 <%= form_with(model: @new_game, scope: :game, url: loaded_questions_games_path) do |form| %>
-  <div>
-    <%= form.label :player_name, class: "mt-3 block" %>
-    <%= form.text_field :player_name, class: "mt-0.5 block w-full", maxlength: ::Player::MAX_NAME_LENGTH %>
+  <div class="mb-3">
+    <%= form.label :player_name %>
+    <%= form.text_field :player_name, class: "w-100", maxlength: ::Player::MAX_NAME_LENGTH %>
   </div>
 
-  <div>
-    <%= form.label :question, class: "mt-3 block" %>
-    <%= form.text_area :question, class: "mt-0.5 block w-full", maxlength: ::Game::MAX_QUESTION_LENGTH %>
+  <div class="mb-3">
+    <%= form.label :question %>
+    <%= form.text_area :question, class: "w-100", maxlength: ::Game::MAX_QUESTION_LENGTH %>
   </div>
 
-  <%= form.submit "Create New Game", class: "mt-3 w-full" %>
+  <%= form.submit "Create New Game", class: "w-100" %>
 <% end %>
