--- a/app/views/loaded_questions/games/polling_guesser.html.erb
+++ b/app/views/loaded_questions/games/polling_guesser.html.erb
@@ -2,16 +2,16 @@
   <%= turbo_frame_tag "guessing_round" do %>
     <%= form_with(model: guessing_round_form, scope: :game, url: guessing_round_loaded_questions_game_path(@game.slug), method: :patch) do |form| %>
       <% unless form.object.errors.empty? %>
-        <div class="p-2 mt-3 bg-red-100 border border-red-400 rounded-lg">
+        <div class="alert alert-danger mt-3" role="alert">
           <% form.object.errors.each do |error| %>
-            <div class="text-sm text-red-500">
+            <div>
               &bull; <%= error %>
             </div>
           <% end %>
         </div>
       <% end %>
 
-      <%= form.submit "Begin Guessing", class: "mt-3 w-full text-white bg-gray-500 hover:bg-gray-800 active:bg-gray-800 outline-none font-medium rounded-lg text-sm p-2" %>
+      <%= form.submit "Begin Guessing", class: "mt-3 w-100 btn btn-secondary" %>
     <% end %>
   <% end %>
 <% end %>
