--- a/app/views/loaded_questions/players/_player.html.erb
+++ b/app/views/loaded_questions/players/_player.html.erb
@@ -1,17 +1,17 @@
-<div class="flex items-center gap-1">
+<div class="d-flex align-items-center gap-1">
   <% if player == current_player || player.online? %>
-    <%= render "icons/solid_circle", classes: "w-5 h-5 text-green-500" %>
+    <i class="bi bi-circle-fill text-success"></i>
   <% else %>
-    <%= render "icons/solid_circle", classes: "w-5 h-5 text-red-500" %>
+    <i class="bi bi-circle-fill text-danger"></i>
   <% end %>
   <% if player.guesser? %>
-    <%= render "icons/solid_star", classes: "w-5 h-5" %>
+    <i class="bi bi-star-fill"></i>
   <% elsif player.answered? %>
-    <%= render "icons/check_square", classes: "w-5 h-5" %>
+    <i class="bi bi-check-square"></i>
   <% else %>
-    <%= render "icons/square", classes: "w-5 h-5" %>
+    <i class="bi bi-square"></i>
   <% end %>
-  <span class="block<%= " font-bold" if player == current_player %>">
+  <span class="d-block<%= " fw-bold" if player == current_player %>">
     <%= player.name %>
   </span>
 </div>
