--- a/app/views/loaded_questions/games/polling_guesser.html.erb
+++ b/app/views/loaded_questions/games/polling_guesser.html.erb
@@ -11,7 +11,7 @@
         </div>
       <% end %>
 
-      <%= form.submit "Begin Guessing", class: "mt-3 w-100 btn btn-secondary" %>
+      <%= form.submit "Begin Guessing", class: "mt-3 w-100 btn btn-primary" %>
     <% end %>
   <% end %>
 <% end %>
