refactor guessed answers

--- a/app/views/loaded_questions/games/_guessed_answer.html.erb
+++ b/app/views/loaded_questions/games/_guessed_answer.html.erb
@@ -11,7 +11,7 @@
       </div>
     <% end %>
     <span class="d-block small">
-      <%= guessed_answer.answer %>
+      <%= guessed_answer.guessed_answer %>
     </span>
   </div>
 </div>
