--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,4 +27,19 @@
       <%= yield %>
     </div>
   </body>
+
+  <div class="container">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+      <div class="col-md-4">
+        <span class="mb-3 mb-md-0 text-muted">© 2025 Jeremy Nicklas</span>
+      </div>
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3">
+          <a class="text-muted" href="https://github.com/nickjer/party">
+            <i class="bi bi-github" style="font-size: 1.5rem;"></i>
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </div>
 </html>
