--- a/app/views/loaded_questions/games/completed.html.erb
+++ b/app/views/loaded_questions/games/completed.html.erb
@@ -15,4 +15,7 @@
       </p>
     </div>
   </div>
+  <% unless @current_player.guesser? %>
+    <%= link_to "Create Next Turn", new_round_loaded_questions_game_path(@game.slug), class: "btn btn-primary w-100" %>
+  <% end %>
 <% end %>
