add new round form

--- a/app/views/loaded_questions/games/_game.html.erb
+++ b/app/views/loaded_questions/games/_game.html.erb
@@ -4,12 +4,14 @@
 
 <div class="d-flex flex-wrap align-items-start gap-2 mt-2">
   <div class="flex-grow-1">
-    <div class="card border-secondary mb-2">
-      <div class="card-body">
-        <strong>Question:</strong>
-        <%= @game.question %>
+    <% unless content_for?(:hide_question) %>
+      <div class="card border-secondary mb-2">
+        <div class="card-body">
+          <strong>Question:</strong>
+          <%= @game.question %>
+        </div>
       </div>
-    </div>
+    <% end %>
 
     <%= turbo_frame_tag "game", refresh: "morph", data: { src: loaded_questions_game_path(@game.slug) } do %>
       <%= yield %>
