--- a/app/views/loaded_questions/games/completed.html.erb
+++ b/app/views/loaded_questions/games/completed.html.erb
@@ -16,6 +16,9 @@
     </div>
   </div>
   <% unless @current_player.guesser? %>
-    <%= link_to "Create Next Turn", new_round_loaded_questions_game_path(@game.slug), class: "btn btn-primary w-100" %>
+    <%= link_to "Create Next Turn",
+      new_round_loaded_questions_game_path(@game.slug),
+      class: "btn btn-primary w-100",
+      data: { turbo_frame: "_top" } %>
   <% end %>
 <% end %>
