--- a/app/views/loaded_questions/games/polling_guesser.html.erb
+++ b/app/views/loaded_questions/games/polling_guesser.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: "loaded_questions/games/game" do %>
+<%= render layout: "loaded_questions/games/round", locals: { game: @game, current_player: @current_player } do %>
   <%= turbo_frame_tag "guessing_round" do %>
     <%= form_with(model: guessing_round_form, scope: :game, url: guessing_round_loaded_questions_game_path(@game.slug), method: :patch) do |form| %>
       <% unless form.object.errors.empty? %>
