--- a/app/views/loaded_questions/games/polling_guesser.html.erb
+++ b/app/views/loaded_questions/games/polling_guesser.html.erb
@@ -1,17 +1,37 @@
 <%= render layout: "loaded_questions/games/round", locals: { game: @game, current_player: @current_player } do %>
   <%= turbo_frame_tag "guessing_round" do %>
-    <%= form_with(model: guessing_round_form, scope: :game, url: guessing_round_loaded_questions_game_path(@game.slug), method: :patch) do |form| %>
-      <% unless form.object.errors.empty? %>
-        <div class="alert alert-danger mt-3" role="alert">
-          <% form.object.errors.each do |error| %>
-            <div>
-              &bull; <%= error %>
-            </div>
+    <% unless guessing_round_form.errors.empty? %>
+      <div class="alert alert-danger mt-3" role="alert">
+        <% guessing_round_form.errors.each do |error| %>
+          <div>
+            &bull; <%= error %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+
+    <div data-controller="dialog">
+      <button type="button" class="mt-3 w-100 btn btn-primary" data-action="dialog#open">
+        Begin Guessing
+      </button>
+
+      <dialog data-dialog-target="dialog" class="border-0 p-4 rounded-3 bg-white" style="max-width: 500px;">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+          <h1 class="fs-5 mb-0">Begin Guessing</h1>
+          <button type="button" class="btn-close" data-action="dialog#close" aria-label="Close"></button>
+        </div>
+        <div class="mb-3">
+          Are you ready to begin guessing? All answers have been submitted.
+        </div>
+        <div class="d-flex justify-content-end gap-2">
+          <button type="button" class="btn btn-secondary" data-action="dialog#close">
+            Close
+          </button>
+          <%= form_with(model: guessing_round_form, scope: :game, url: guessing_round_loaded_questions_game_path(@game.slug), method: :patch) do |form| %>
+            <%= form.submit "Yes, I am ready", class: "btn btn-primary" %>
           <% end %>
         </div>
-      <% end %>
-
-      <%= form.submit "Begin Guessing", class: "mt-3 w-100 btn btn-primary" %>
-    <% end %>
+      </dialog>
+    </div>
   <% end %>
 <% end %>
