--- a/app/views/loaded_questions/players/new.html.erb
+++ b/app/views/loaded_questions/players/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_with(model: @new_player, scope: :player, url: loaded_questions_game_player_path(@new_player.game_slug)) do |form| %>
   <div class="mb-3">
     <%= form.label :name %>
-    <%= form.text_field :name, class: "w-100", maxlength: ::Player::MAX_NAME_LENGTH %>
+    <%= form.text_field :name, class: "w-100", maxlength: Player::MAX_NAME_LENGTH %>
   </div>
 
   <%= form.submit "Create New Player", class: "w-100" %>
