--- a/app/views/loaded_questions/games/guessing_guesser.html.erb
+++ b/app/views/loaded_questions/games/guessing_guesser.html.erb
@@ -3,14 +3,10 @@
     data-controller="swap"
     data-swap-name-value="guess"
     data-swap-url-value="<%= swap_guesses_loaded_questions_game_path(@game.slug) %>">
-    <%=
-      render(
-        partial: "loaded_questions/games/guessed_answer",
-        collection: @game.guesses,
-        as: :guessed_answer,
-        locals: { gripper: true }
-      )
-    %>
+    <%= render(partial: "loaded_questions/games/guessed_answer",
+      collection: @game.guesses,
+      as: :guessed_answer,
+      locals: { gripper: true }) %>
   </div>
 
   <div data-controller="dialog">
@@ -30,11 +26,11 @@
         <button type="button" class="btn btn-secondary" data-action="dialog#close">
           Close
         </button>
-        <%= button_to "Yes, I am sure",
-            completed_round_loaded_questions_game_path(@game.slug),
-            method: :patch,
-            class: "btn btn-primary",
-            form: { data: { turbo: false } } %>
+        <%= button_to("Yes, I am sure",
+          completed_round_loaded_questions_game_path(@game.slug),
+          method: :patch,
+          class: "btn btn-primary",
+          form: { data: { turbo: false } }) %>
       </div>
     </dialog>
   </div>
