--- a/app/views/loaded_questions/games/guessing_player.html.erb
+++ b/app/views/loaded_questions/games/guessing_player.html.erb
@@ -1,12 +1,8 @@
 <%= render layout: "loaded_questions/games/round", locals: { game: @game, current_player: @current_player } do %>
   <div id="answers" class="mt-2 px-2 pb-2 border rounded">
-    <%=
-      render(
-        partial: "loaded_questions/games/guessed_answer",
-        collection: @game.guesses,
-        as: :guessed_answer,
-        locals: { gripper: false }
-      )
-    %>
+    <%= render(partial: "loaded_questions/games/guessed_answer",
+      collection: @game.guesses,
+      as: :guessed_answer,
+      locals: { gripper: false }) %>
   </div>
 <% end %>
