expose underlying model

--- a/app/views/loaded_questions/players/_player.html.erb
+++ b/app/views/loaded_questions/players/_player.html.erb
@@ -1,5 +1,5 @@
 <%# locals: (player:, current_player:) %>
-<div class="d-flex align-items-center gap-1">
+<div id="<%= dom_id(player) %>" class="d-flex align-items-center gap-1">
   <% if player == current_player || player.online? %>
     <i class="bi bi-circle-fill text-success"></i>
   <% else %>
