--- a/app/views/loaded_questions/games/guessing_guesser.html.erb
+++ b/app/views/loaded_questions/games/guessing_guesser.html.erb
@@ -1,10 +1,11 @@
-<%= render layout: "loaded_questions/games/round", locals: { game: @game, current_player: @current_player } do %>
+<%# locals: (game:, current_player:) %>
+<%= render layout: "loaded_questions/games/round", locals: { game:, current_player: } do %>
   <div id="answers" class="mt-2 px-2 pb-2 border rounded"
     data-controller="swap"
     data-swap-name-value="guess"
-    data-swap-url-value="<%= swap_guesses_loaded_questions_game_path(@game.slug) %>">
+    data-swap-url-value="<%= swap_guesses_loaded_questions_game_path(game.slug) %>">
     <%= render(partial: "loaded_questions/games/guessed_answer",
-      collection: @game.guesses,
+      collection: game.guesses,
       as: :guessed_answer,
       locals: { gripper: true }) %>
   </div>
@@ -27,7 +28,7 @@
           Close
         </button>
         <%= button_to("Yes, I am sure",
-          completed_round_loaded_questions_game_path(@game.slug),
+          completed_round_loaded_questions_game_path(game.slug),
           method: :patch,
           class: "btn btn-primary",
           form: { data: { turbo: false } }) %>
