--- a/app/views/loaded_questions/games/polling_guesser.html.erb
+++ b/app/views/loaded_questions/games/polling_guesser.html.erb
@@ -1,4 +1,5 @@
-<%= render layout: "loaded_questions/games/round", locals: { game: @game, current_player: @current_player } do %>
+<%# locals: (game:, current_player:, guessing_round_form:) %>
+<%= render layout: "loaded_questions/games/round", locals: { game:, current_player: } do %>
   <%= turbo_frame_tag "guessing_round" do %>
     <% unless guessing_round_form.errors.empty? %>
       <div class="alert alert-danger mt-3" role="alert">
@@ -27,7 +28,7 @@
           <button type="button" class="btn btn-secondary" data-action="dialog#close">
             Close
           </button>
-          <%= form_with(model: guessing_round_form, scope: :game, url: guessing_round_loaded_questions_game_path(@game.slug), method: :patch) do |form| %>
+          <%= form_with(model: guessing_round_form, scope: :game, url: guessing_round_loaded_questions_game_path(game.slug), method: :patch) do |form| %>
             <%= form.submit "Yes, I am ready", class: "btn btn-primary" %>
           <% end %>
         </div>
