--- a/app/views/loaded_questions/players/create.turbo_stream.erb
+++ b/app/views/loaded_questions/players/create.turbo_stream.erb
@@ -1,6 +1,7 @@
-<%= turbo_stream.replace "players" do %>
+<%# locals: (game:, current_player:) %>
+<%= turbo_stream.update "players" do %>
   <%= render partial: "loaded_questions/players/player",
-    collection: @game.players,
+    collection: game.players,
     as: :player,
-    locals: { current_player: @current_player } %>
+    locals: { current_player: } %>
 <% end %>
